Updated all projects to .Net 8 Added Structurizr.Annotations to all projects Added SonarAnalyzer to all projects Updated Microsoft.NET.Test.Sdk Updated HtmlAgilityPack

--- a/src/modules/Authentication/Deliscio.Modules.Authentication/Deliscio.Modules.Authentication.csproj
+++ b/src/modules/Authentication/Deliscio.Modules.Authentication/Deliscio.Modules.Authentication.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net7.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<LangVersion>preview</LangVersion>
@@ -9,10 +9,15 @@
 
 	<ItemGroup>
 	  <PackageReference Include="AspNetCore.Identity.MongoDbCore" Version="3.1.2" />
-	  <PackageReference Include="MediatR" Version="12.1.1" />
+	  <PackageReference Include="MediatR" Version="12.2.0" />
 	  <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
 	  <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
-	  <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.12" />
+	  <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.1" />
+	  <PackageReference Include="SonarAnalyzer.CSharp" Version="9.17.0.82934">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+	  <PackageReference Include="Structurizr.Annotations" Version="0.9.3" />
 	</ItemGroup>
 
 	<ItemGroup>
