--- a/src/modules/QueuedLink/Verifier/Deliscio.Modules.QueuedLinks.Verifier.csproj
+++ b/src/modules/QueuedLink/Verifier/Deliscio.Modules.QueuedLinks.Verifier.csproj
@@ -1,11 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net7.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<LangVersion>preview</LangVersion>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="SonarAnalyzer.CSharp" Version="9.17.0.82934">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+	  <PackageReference Include="Structurizr.Annotations" Version="0.9.3" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\Links\Deliscio.Modules.Links.MediatR\Deliscio.Modules.Links.MediatR.csproj" />
