--- a/src/modules/UserAuthentication/Deliscio.Modules.UserAuthentication/Deliscio.Modules.UserAuthentication.csproj
+++ b/src/modules/UserAuthentication/Deliscio.Modules.UserAuthentication/Deliscio.Modules.UserAuthentication.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net7.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<LangVersion>preview</LangVersion>
@@ -11,6 +11,14 @@
 		<Folder Include="Common\Interfaces\" />
 		<Folder Include="Common\Models\" />
 		<Folder Include="Interfaces\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="SonarAnalyzer.CSharp" Version="9.17.0.82934">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+	  <PackageReference Include="Structurizr.Annotations" Version="0.9.3" />
 	</ItemGroup>
 
 	<ItemGroup>
