--- a/src/ui/admin/blazor/Deliscio.Web.Admin/Deliscio.Web.Admin/Deliscio.Web.Admin.csproj
+++ b/src/ui/admin/blazor/Deliscio.Web.Admin/Deliscio.Web.Admin/Deliscio.Web.Admin.csproj
@@ -8,7 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.1" />
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="9.17.0.82934">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Structurizr.Annotations" Version="0.9.3" />
   </ItemGroup>
 
   <ItemGroup>
