--- a/src/modules/QueuedLink/MassTransit/Deliscio.Modules.QueuedLinks.MassTransit.csproj
+++ b/src/modules/QueuedLink/MassTransit/Deliscio.Modules.QueuedLinks.MassTransit.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net7.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<LangVersion>preview</LangVersion>
@@ -12,8 +12,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="MassTransit" Version="8.1.1" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
+		<PackageReference Include="MassTransit" Version="8.1.3" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+		<PackageReference Include="SonarAnalyzer.CSharp" Version="9.17.0.82934">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Structurizr.Annotations" Version="0.9.3" />
 	</ItemGroup>
 
 	<ItemGroup>
