--- a/src/modules/UserLinks/UserLinks/Deliscio.Modules.UserLinks.csproj
+++ b/src/modules/UserLinks/UserLinks/Deliscio.Modules.UserLinks.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net7.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<LangVersion>preview</LangVersion>
@@ -23,6 +23,14 @@
 
 	<ItemGroup>
 		<Folder Include="Mappers\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="SonarAnalyzer.CSharp" Version="9.17.0.82934">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+	  <PackageReference Include="Structurizr.Annotations" Version="0.9.3" />
 	</ItemGroup>
 	<Target Name="GitVersion" BeforeTargets="BeforeBuild">
 		<Exec Command="dotnet gitversion /output buildserver" />
