--- a/src/common/Common/Deliscio.Common.csproj
+++ b/src/common/Common/Deliscio.Common.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="SonarAnalyzer.CSharp" Version="9.17.0.82934">
+        <PackageReference Include="SonarAnalyzer.CSharp" Version="9.19.0.84025">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
@@ -18,6 +18,7 @@
     <ItemGroup>
         <Folder Include="Interfaces\" />
         <Folder Include="Http\" />
+        <Folder Include="Helpers\" />
     </ItemGroup>
 
     <ItemGroup>
