--- a/src/modules/Links/Deliscio.Modules.Links.Common/Deliscio.Modules.Links.Common.csproj
+++ b/src/modules/Links/Deliscio.Modules.Links.Common/Deliscio.Modules.Links.Common.csproj
@@ -10,7 +10,7 @@
 	<ItemGroup>
 		<PackageReference Include="Ardalis.GuardClauses" Version="4.4.0" />
 		<PackageReference Include="MediatR" Version="12.2.0" />
-		<PackageReference Include="SonarAnalyzer.CSharp" Version="9.17.0.82934">
+		<PackageReference Include="SonarAnalyzer.CSharp" Version="9.19.0.84025">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
@@ -20,6 +20,10 @@
 	<ItemGroup>
 		<ProjectReference Include="..\..\..\core\Deliscio.Core.Data.Mongo\Deliscio.Core.Data.Mongo.csproj" />
 		<ProjectReference Include="..\..\..\core\Deliscio.Core\Deliscio.Core.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Models\Requests\" />
 	</ItemGroup>
 	<Target Name="GitVersion" BeforeTargets="BeforeBuild">
 		<Exec Command="dotnet gitversion /output buildserver" />
