--- a/src/modules/UserLinks/UserLinks/Deliscio.Modules.UserLinks.csproj
+++ b/src/modules/UserLinks/UserLinks/Deliscio.Modules.UserLinks.csproj
@@ -17,6 +17,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\..\..\common\Common\Deliscio.Common.csproj" />
 		<ProjectReference Include="..\..\..\core\Deliscio.Core.Data.Mongo\Deliscio.Core.Data.Mongo.csproj" />
 		<ProjectReference Include="..\Common\Deliscio.Modules.UserLinks.Common.csproj" />
 	</ItemGroup>
