--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -7,6 +7,7 @@
 
         <Version>0.1.0</Version>
         <PackageVersion>0.1.0</PackageVersion>
+        <GenerateSymbols>true</GenerateSymbols>
     </PropertyGroup>
 
     <ItemGroup>
