--- a/src/apis/webapis/Deliscio.Apis.WebApis.Common/Deliscio.Apis.WebApi.Common.csproj
+++ b/src/apis/webapis/Deliscio.Apis.WebApis.Common/Deliscio.Apis.WebApi.Common.csproj
@@ -30,7 +30,7 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\..\..\common\Common\Deliscio.Common.csproj" />
 	  <ProjectReference Include="..\..\..\modules\Authentication\Deliscio.Modules.Authentication\Deliscio.Modules.Authentication.csproj" />
-	  <ProjectReference Include="..\..\..\modules\Links\Deliscio.Modules.Links.Common\Deliscio.Modules.Links.Common.csproj" />
+	  <ProjectReference Include="..\..\..\modules\Links\Deliscio.Modules.Links\Deliscio.Modules.Links.csproj" />
 	  <ProjectReference Include="..\..\..\modules\UserLinks\Common\Deliscio.Modules.UserLinks.Common.csproj" />
 	  <ProjectReference Include="..\..\..\modules\UserProfiles\Deliscio.Modules.UserProfiles\Deliscio.Modules.UserProfiles.csproj" />
 	</ItemGroup>
