--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -10,7 +10,7 @@
         <GenerateSymbols>true</GenerateSymbols>
     </PropertyGroup>
 
-    <ItemGroup>
+    <!--<ItemGroup>
         <DotNetCliToolReference Include="GitVersion.Tool" Version="5.12.0" />
     </ItemGroup>
 
@@ -23,8 +23,8 @@
             <Output TaskParameter="ExitCode" PropertyName="GitVersionExitCode" />
         </Exec>
 
-        <Exec Condition="'$(GitVersionExitCode)' != '0'" Command="echo GitVersion.Tool is not installed. Please run the following command to install it: &amp; dotnet tool install -g GitVersion.Tool --version 5.*" />
+        <Exec Condition="'$(GitVersionExitCode)' != '0'" Command="echo GitVersion.Tool is not installed. Please run the following command to install it: &amp; dotnet tool install -g GitVersion.Tool - -version 5.*" />
         <Exec Condition="'$(GitVersionExitCode)' == '0'" Command="dotnet-gitversion /output buildserver" />
     </Target>
-
+-->
 </Project>
