--- a/src/modules/Links/Deliscio.Modules.Links.MediatR/Deliscio.Modules.Links.MediatR.csproj
+++ b/src/modules/Links/Deliscio.Modules.Links.MediatR/Deliscio.Modules.Links.MediatR.csproj
@@ -1,32 +1,32 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<!-- <TargetFramework>net8.0</TargetFramework> -->
-		<!-- <ImplicitUsings>enable</ImplicitUsings> -->
-		<!-- <Nullable>enable</Nullable> -->
-		<!-- <LangVersion>preview</LangVersion> -->
-	</PropertyGroup>
+    <PropertyGroup>
+        <!-- <TargetFramework>net8.0</TargetFramework> -->
+        <!-- <ImplicitUsings>enable</ImplicitUsings> -->
+        <!-- <Nullable>enable</Nullable> -->
+        <!-- <LangVersion>preview</LangVersion> -->
+    </PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Ardalis.GuardClauses" Version="4.4.0" />
-		<PackageReference Include="MediatR" Version="12.2.0" />
-		<PackageReference Include="MediatR.Contracts" Version="2.0.1" />
-		<PackageReference Include="SonarAnalyzer.CSharp" Version="9.19.0.84025">
-		  <PrivateAssets>all</PrivateAssets>
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include="Structurizr.Annotations" Version="0.9.3" />
-	</ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Ardalis.GuardClauses" Version="4.4.0" />
+        <PackageReference Include="MediatR" Version="12.2.0" />
+        <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
+        <PackageReference Include="SonarAnalyzer.CSharp" Version="9.19.0.84025">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Structurizr.Annotations" Version="0.9.3" />
+    </ItemGroup>
 
-	<ItemGroup>
-		<ProjectReference Include="..\..\..\core\Deliscio.Core\Deliscio.Core.csproj" />
-		<ProjectReference Include="..\Deliscio.Modules.Links\Deliscio.Modules.Links.csproj" />
-	</ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\..\..\core\Deliscio.Core\Deliscio.Core.csproj" />
+        <ProjectReference Include="..\Deliscio.Modules.Links\Deliscio.Modules.Links.csproj" />
+    </ItemGroup>
 
-	<ItemGroup>
-	  <Folder Include="Commands\Handlers\" />
-	</ItemGroup>
-	<Target Name="GitVersion" BeforeTargets="BeforeBuild">
-		<!-- <Exec Command="dotnet gitversion /output buildserver" /> -->
-	</Target>
+    <ItemGroup>
+        <Folder Include="Commands\Handlers\" />
+    </ItemGroup>
+    <!--<Target Name="GitVersion" BeforeTargets="BeforeBuild">
+		 <Exec Command="dotnet gitversion /output buildserver" /> 
+	</Target>-->
 </Project>
