--- a/src/modules/QueuedLink/MassTransit/Deliscio.Modules.QueuedLinks.MassTransit.csproj
+++ b/src/modules/QueuedLink/MassTransit/Deliscio.Modules.QueuedLinks.MassTransit.csproj
@@ -1,35 +1,35 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<!-- <TargetFramework>net8.0</TargetFramework> -->
-		<!-- <ImplicitUsings>enable</ImplicitUsings> -->
-		<!-- <Nullable>enable</Nullable> -->
-		<!-- <LangVersion>preview</LangVersion> -->
-	</PropertyGroup>
+    <PropertyGroup>
+        <!-- <TargetFramework>net8.0</TargetFramework> -->
+        <!-- <ImplicitUsings>enable</ImplicitUsings> -->
+        <!-- <Nullable>enable</Nullable> -->
+        <!-- <LangVersion>preview</LangVersion> -->
+    </PropertyGroup>
 
-	<ItemGroup>
-		<Compile Remove="Models\LinksQueueSettingsOptions.cs" />
-	</ItemGroup>
+    <ItemGroup>
+        <Compile Remove="Models\LinksQueueSettingsOptions.cs" />
+    </ItemGroup>
 
-	<ItemGroup>
-		<PackageReference Include="MassTransit" Version="8.1.3" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
-		<PackageReference Include="SonarAnalyzer.CSharp" Version="9.19.0.84025">
-		  <PrivateAssets>all</PrivateAssets>
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include="Structurizr.Annotations" Version="0.9.3" />
-	</ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="MassTransit" Version="8.1.3" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+        <PackageReference Include="SonarAnalyzer.CSharp" Version="9.19.0.84025">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Structurizr.Annotations" Version="0.9.3" />
+    </ItemGroup>
 
-	<ItemGroup>
-		<ProjectReference Include="..\Common\Deliscio.Modules.QueuedLinks.Common.csproj" />
-		<ProjectReference Include="..\QueuedLinks\Deliscio.Modules.QueuedLinks.csproj" />
-	</ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\Common\Deliscio.Modules.QueuedLinks.Common.csproj" />
+        <ProjectReference Include="..\QueuedLinks\Deliscio.Modules.QueuedLinks.csproj" />
+    </ItemGroup>
 
-	<ItemGroup>
-		<Folder Include="Models\" />
-	</ItemGroup>
-	<Target Name="GitVersion" BeforeTargets="BeforeBuild">
-		<!-- <Exec Command="dotnet gitversion /output buildserver" /> -->
-	</Target>
+    <ItemGroup>
+        <Folder Include="Models\" />
+    </ItemGroup>
+    <!--<Target Name="GitVersion" BeforeTargets="BeforeBuild">
+		 <Exec Command="dotnet gitversion /output buildserver" />
+	</Target>-->
 </Project>
