--- a/src/ui/mvc/Deliscio.Web.Mvc.csproj
+++ b/src/ui/mvc/Deliscio.Web.Mvc.csproj
@@ -1,5 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
+	<PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+	  <TypeScriptTarget>ES2021</TypeScriptTarget>
+	  <TypeScriptRemoveComments>True</TypeScriptRemoveComments>
+	</PropertyGroup>
+
+	<PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+	  <TypeScriptTarget>ES2021</TypeScriptTarget>
+	  <TypeScriptRemoveComments>True</TypeScriptRemoveComments>
+	</PropertyGroup>
+
 	<PropertyGroup>
 		<!-- <TargetFramework>net8.0</TargetFramework> -->
 		<!-- <Nullable>enable</Nullable> -->
@@ -50,18 +60,22 @@
 		<Compile Remove="Library\**" />
 		<Compile Remove="wwwroot\css\**" />
 		<Compile Remove="wwwroot\js\**" />
+		<Compile Remove="wwwroot\modules\components\**" />
 		<Compile Remove="wwwroot\react\**" />
 		<Content Remove="Library\**" />
 		<Content Remove="wwwroot\css\**" />
 		<Content Remove="wwwroot\js\**" />
+		<Content Remove="wwwroot\modules\components\**" />
 		<Content Remove="wwwroot\react\**" />
 		<EmbeddedResource Remove="Library\**" />
 		<EmbeddedResource Remove="wwwroot\css\**" />
 		<EmbeddedResource Remove="wwwroot\js\**" />
+		<EmbeddedResource Remove="wwwroot\modules\components\**" />
 		<EmbeddedResource Remove="wwwroot\react\**" />
 		<None Remove="Library\**" />
 		<None Remove="wwwroot\css\**" />
 		<None Remove="wwwroot\js\**" />
+		<None Remove="wwwroot\modules\components\**" />
 		<None Remove="wwwroot\react\**" />
 	</ItemGroup>
 
@@ -70,14 +84,14 @@
 		<Content Remove="compilerconfig.json" />
 		<Content Remove="wwwroot\modules\images\ImageCollection.mjs" />
 		<Content Remove="wwwroot\scss\_variables.scss" />
-		<Content Remove="wwwroot\tsx\Pager\bak\index.xtsx" />
-		<Content Remove="wwwroot\tsx\Pager\bak\Pager.module.scss.d.xts" />
-		<Content Remove="wwwroot\tsx\Pager\bak\Pager.module.xscss" />
-		<Content Remove="wwwroot\tsx\Pager\bak\Pager.xtsx" />
-		<Content Remove="wwwroot\tsx\Pager\index.tsx" />
-		<Content Remove="wwwroot\tsx\Pager\Pager.module.scss" />
-		<Content Remove="wwwroot\tsx\Pager\Pager.module.scss.d.ts" />
-		<Content Remove="wwwroot\tsx\Pager\Pager.tsx" />
+		<Content Remove="wwwroot\src\tsx\Pager\bak\index.xtsx" />
+		<Content Remove="wwwroot\src\tsx\Pager\bak\Pager.module.scss.d.xts" />
+		<Content Remove="wwwroot\src\tsx\Pager\bak\Pager.module.xscss" />
+		<Content Remove="wwwroot\src\tsx\Pager\bak\Pager.xtsx" />
+		<Content Remove="wwwroot\src\tsx\Pager\index.tsx" />
+		<Content Remove="wwwroot\src\tsx\Pager\Pager.module.scss" />
+		<Content Remove="wwwroot\src\tsx\Pager\Pager.module.scss.d.ts" />
+		<Content Remove="wwwroot\src\tsx\Pager\Pager.tsx" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -94,6 +108,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.0.0-preview.4.24156.9" />
 		<PackageReference Include="Aspire.StackExchange.Redis.OutputCaching" Version="8.0.0-preview.3.24105.21" />
 		<PackageReference Include="AspNetCore.Identity.MongoDbCore" Version="3.1.2" />
 		<PackageReference Include="MassTransit.Abstractions" Version="8.1.3" />
@@ -110,21 +125,22 @@
 
 	<ItemGroup>
 		<Folder Include="ViewComponents\Header\" />
-		<Folder Include="wwwroot\modules\components\" />
+		<Folder Include="wwwroot\client\" />
+		<Folder Include="wwwroot\src\tsx\pages\links-details\" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<None Include="compilerconfig.json" />
 		<None Include="wwwroot\modules\images\ImageCollection.mjs" />
 		<None Include="wwwroot\scss\_variables.scss" />
-		<None Include="wwwroot\tsx\Pager\bak\index.xtsx" />
-		<None Include="wwwroot\tsx\Pager\bak\Pager.module.scss.d.xts" />
-		<None Include="wwwroot\tsx\Pager\bak\Pager.module.xscss" />
-		<None Include="wwwroot\tsx\Pager\bak\Pager.xtsx" />
-		<None Include="wwwroot\tsx\Pager\index.tsx" />
-		<None Include="wwwroot\tsx\Pager\Pager.module.scss" />
-		<None Include="wwwroot\tsx\Pager\Pager.module.scss.d.ts" />
-		<None Include="wwwroot\tsx\Pager\Pager.tsx" />
+		<None Include="wwwroot\src\tsx\Pager\bak\index.xtsx" />
+		<None Include="wwwroot\src\tsx\Pager\bak\Pager.module.scss.d.xts" />
+		<None Include="wwwroot\src\tsx\Pager\bak\Pager.module.xscss" />
+		<None Include="wwwroot\src\tsx\Pager\bak\Pager.xtsx" />
+		<None Include="wwwroot\src\tsx\Pager\index.tsx" />
+		<None Include="wwwroot\src\tsx\Pager\Pager.module.scss" />
+		<None Include="wwwroot\src\tsx\Pager\Pager.module.scss.d.ts" />
+		<None Include="wwwroot\src\tsx\Pager\Pager.tsx" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -134,6 +150,7 @@
 		<ProjectReference Include="..\..\core\Deliscio.Core.Data.Mongo\Deliscio.Core.Data.Mongo.csproj" />
 		<ProjectReference Include="..\..\core\Deliscio.Core\Deliscio.Core.csproj" />
 		<ProjectReference Include="..\..\modules\Authentication\Deliscio.Modules.Authentication\Deliscio.Modules.Authentication.csproj" />
+		<ProjectReference Include="..\..\modules\Common\Caching\RedisCaching\RedisCaching.csproj" />
 		<ProjectReference Include="..\..\modules\Links\Deliscio.Modules.Links.MediatR\Deliscio.Modules.Links.MediatR.csproj" />
 		<ProjectReference Include="..\..\modules\Links\Deliscio.Modules.Links\Deliscio.Modules.Links.csproj" />
 	</ItemGroup>
