--- a/src/ui/mvc/package.json
+++ b/src/ui/mvc/package.json
@@ -3,11 +3,13 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
+    "type": "module",
     "scripts": {
+        "build": "vite build",
+        "dev": "vite",
+        "preview": "vite preview",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "webpack --mode=development",
-        "watch": "webpack --mode=development --watch",
-        "library": "webpack --config webpack.library.config.js --mode=development"
+        "watch": "vite build --watch"
     },
     "keywords": [],
     "author": "",
@@ -48,6 +50,8 @@
         "style-loader": "^3.3.3",
         "ts-loader": "^9.5.0",
         "typescript-eslint": "^0.0.1-alpha.0",
+        "vite": "^5.1.6",
+        "vite-plugin-mkcert": "^1.17.4",
         "webpack": "^5.89.0",
         "webpack-cli": "^5.1.4",
         "webpack-hot-middleware": "^2.25.4"
