--- a/src/modules/QueuedLink/QueuedLinks/Deliscio.Modules.QueuedLinks.csproj
+++ b/src/modules/QueuedLink/QueuedLinks/Deliscio.Modules.QueuedLinks.csproj
@@ -1,46 +1,46 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<!-- <TargetFramework>net8.0</TargetFramework> -->
-		<!-- <ImplicitUsings>enable</ImplicitUsings> -->
-		<!-- <Nullable>enable</Nullable> -->
-		<!-- <LangVersion>preview</LangVersion> -->
-	</PropertyGroup>
+    <PropertyGroup>
+        <!-- <TargetFramework>net8.0</TargetFramework> -->
+        <!-- <ImplicitUsings>enable</ImplicitUsings> -->
+        <!-- <Nullable>enable</Nullable> -->
+        <!-- <LangVersion>preview</LangVersion> -->
+    </PropertyGroup>
 
-	<ItemGroup>
-		<Compile Remove="Data\**" />
-		<Compile Remove="Mappers\**" />
-		<Compile Remove="Models\**" />
-		<Compile Remove="Requests\**" />
-		<Compile Remove="Responses\**" />
-		<EmbeddedResource Remove="Data\**" />
-		<EmbeddedResource Remove="Mappers\**" />
-		<EmbeddedResource Remove="Models\**" />
-		<EmbeddedResource Remove="Requests\**" />
-		<EmbeddedResource Remove="Responses\**" />
-		<None Remove="Data\**" />
-		<None Remove="Mappers\**" />
-		<None Remove="Models\**" />
-		<None Remove="Requests\**" />
-		<None Remove="Responses\**" />
-	</ItemGroup>
+    <ItemGroup>
+        <Compile Remove="Data\**" />
+        <Compile Remove="Mappers\**" />
+        <Compile Remove="Models\**" />
+        <Compile Remove="Requests\**" />
+        <Compile Remove="Responses\**" />
+        <EmbeddedResource Remove="Data\**" />
+        <EmbeddedResource Remove="Mappers\**" />
+        <EmbeddedResource Remove="Models\**" />
+        <EmbeddedResource Remove="Requests\**" />
+        <EmbeddedResource Remove="Responses\**" />
+        <None Remove="Data\**" />
+        <None Remove="Mappers\**" />
+        <None Remove="Models\**" />
+        <None Remove="Requests\**" />
+        <None Remove="Responses\**" />
+    </ItemGroup>
 
-	<ItemGroup>
-	  <PackageReference Include="SonarAnalyzer.CSharp" Version="9.21.0.86780">
-	    <PrivateAssets>all</PrivateAssets>
-	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-	  </PackageReference>
-	  <PackageReference Include="Structurizr.Annotations" Version="0.9.3" />
-	</ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="SonarAnalyzer.CSharp" Version="9.21.0.86780">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Structurizr.Annotations" Version="0.9.3" />
+    </ItemGroup>
 
-	<ItemGroup>
-		<ProjectReference Include="..\..\..\core\Deliscio.Core\Deliscio.Core.csproj" />
-		<ProjectReference Include="..\Common\Deliscio.Modules.QueuedLinks.Common.csproj" />
-		<ProjectReference Include="..\Harvester\Deliscio.Modules.QueuedLinks.Harvester.csproj" />
-		<ProjectReference Include="..\Tagger\Deliscio.Modules.QueuedLinks.Tagger.csproj" />
-		<ProjectReference Include="..\Verifier\Deliscio.Modules.QueuedLinks.Verifier.csproj" />
-	</ItemGroup>
-	<Target Name="GitVersion" BeforeTargets="BeforeBuild">
-		<!-- <Exec Command="dotnet gitversion /output buildserver" /> -->
-	</Target>
+    <ItemGroup>
+        <ProjectReference Include="..\..\..\core\Deliscio.Core\Deliscio.Core.csproj" />
+        <ProjectReference Include="..\Common\Deliscio.Modules.QueuedLinks.Common.csproj" />
+        <ProjectReference Include="..\Harvester\Deliscio.Modules.QueuedLinks.Harvester.csproj" />
+        <ProjectReference Include="..\Tagger\Deliscio.Modules.QueuedLinks.Tagger.csproj" />
+        <ProjectReference Include="..\Verifier\Deliscio.Modules.QueuedLinks.Verifier.csproj" />
+    </ItemGroup>
+    <!--<Target Name="GitVersion" BeforeTargets="BeforeBuild">
+         <Exec Command="dotnet gitversion /output buildserver" /> 
+    </Target>-->
 </Project>
