--- a/src/modules/QueuedLink/Verifier/Deliscio.Modules.QueuedLinks.Verifier.csproj
+++ b/src/modules/QueuedLink/Verifier/Deliscio.Modules.QueuedLinks.Verifier.csproj
@@ -1,25 +1,25 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<!-- <TargetFramework>net8.0</TargetFramework> -->
-		<!-- <ImplicitUsings>enable</ImplicitUsings> -->
-		<!-- <Nullable>enable</Nullable> -->
-		<!-- <LangVersion>preview</LangVersion> -->
-	</PropertyGroup>
+    <PropertyGroup>
+        <!-- <TargetFramework>net8.0</TargetFramework> -->
+        <!-- <ImplicitUsings>enable</ImplicitUsings> -->
+        <!-- <Nullable>enable</Nullable> -->
+        <!-- <LangVersion>preview</LangVersion> -->
+    </PropertyGroup>
 
-	<ItemGroup>
-	  <PackageReference Include="SonarAnalyzer.CSharp" Version="9.21.0.86780">
-	    <PrivateAssets>all</PrivateAssets>
-	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-	  </PackageReference>
-	  <PackageReference Include="Structurizr.Annotations" Version="0.9.3" />
-	</ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="SonarAnalyzer.CSharp" Version="9.21.0.86780">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Structurizr.Annotations" Version="0.9.3" />
+    </ItemGroup>
 
-	<ItemGroup>
-		<ProjectReference Include="..\..\Links\Deliscio.Modules.Links.MediatR\Deliscio.Modules.Links.MediatR.csproj" />
-		<ProjectReference Include="..\Common\Deliscio.Modules.QueuedLinks.Common.csproj" />
-	</ItemGroup>
-	<Target Name="GitVersion" BeforeTargets="BeforeBuild">
-		<!-- <Exec Command="dotnet gitversion /output buildserver" /> -->
-	</Target>
+    <ItemGroup>
+        <ProjectReference Include="..\..\Links\Deliscio.Modules.Links.MediatR\Deliscio.Modules.Links.MediatR.csproj" />
+        <ProjectReference Include="..\Common\Deliscio.Modules.QueuedLinks.Common.csproj" />
+    </ItemGroup>
+    <!--<Target Name="GitVersion" BeforeTargets="BeforeBuild">
+         <Exec Command="dotnet gitversion /output buildserver" /> 
+    </Target>-->
 </Project>
