--- a/src/modules/UserAuthentication/Deliscio.Modules.UserAuthentication/Deliscio.Modules.UserAuthentication.csproj
+++ b/src/modules/UserAuthentication/Deliscio.Modules.UserAuthentication/Deliscio.Modules.UserAuthentication.csproj
@@ -1,30 +1,30 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<!-- <TargetFramework>net8.0</TargetFramework> -->
-		<!-- <ImplicitUsings>enable</ImplicitUsings> -->
-		<!-- <Nullable>enable</Nullable> -->
-		<!-- <LangVersion>preview</LangVersion> -->
-	</PropertyGroup>
+    <PropertyGroup>
+        <!-- <TargetFramework>net8.0</TargetFramework> -->
+        <!-- <ImplicitUsings>enable</ImplicitUsings> -->
+        <!-- <Nullable>enable</Nullable> -->
+        <!-- <LangVersion>preview</LangVersion> -->
+    </PropertyGroup>
 
-	<ItemGroup>
-		<Folder Include="Common\Interfaces\" />
-		<Folder Include="Common\Models\" />
-		<Folder Include="Interfaces\" />
-	</ItemGroup>
+    <ItemGroup>
+        <Folder Include="Common\Interfaces\" />
+        <Folder Include="Common\Models\" />
+        <Folder Include="Interfaces\" />
+    </ItemGroup>
 
-	<ItemGroup>
-	  <PackageReference Include="SonarAnalyzer.CSharp" Version="9.21.0.86780">
-	    <PrivateAssets>all</PrivateAssets>
-	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-	  </PackageReference>
-	  <PackageReference Include="Structurizr.Annotations" Version="0.9.3" />
-	</ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="SonarAnalyzer.CSharp" Version="9.21.0.86780">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Structurizr.Annotations" Version="0.9.3" />
+    </ItemGroup>
 
-	<ItemGroup>
-		<ProjectReference Include="..\..\..\core\Deliscio.Core.Data.Mongo\Deliscio.Core.Data.Mongo.csproj" />
-	</ItemGroup>
-	<Target Name="GitVersion" BeforeTargets="BeforeBuild">
-		<!-- <Exec Command="dotnet gitversion /output buildserver" /> -->
-	</Target>
+    <ItemGroup>
+        <ProjectReference Include="..\..\..\core\Deliscio.Core.Data.Mongo\Deliscio.Core.Data.Mongo.csproj" />
+    </ItemGroup>
+    <!--<Target Name="GitVersion" BeforeTargets="BeforeBuild">
+         <Exec Command="dotnet gitversion /output buildserver" /> 
+    </Target>-->
 </Project>
