--- a/src/workers/LinksProcessor/Deliscio.Workers.LinksProcessor.csproj
+++ b/src/workers/LinksProcessor/Deliscio.Workers.LinksProcessor.csproj
@@ -1,35 +1,35 @@
 <Project Sdk="Microsoft.NET.Sdk.Worker">
 
-	<PropertyGroup>
-		<!-- <TargetFramework>net8.0</TargetFramework> -->
-		<!-- <Nullable>enable</Nullable> -->
-		<!-- <ImplicitUsings>enable</ImplicitUsings> -->
-		<UserSecretsId>dotnet-Deliscio.Workers.LinksProcessor-6c561a17-0044-43d4-a19c-ffc536c6e507</UserSecretsId>
-		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-		<DockerfileContext>..\..\..</DockerfileContext>
-		<!-- <LangVersion>preview</LangVersion> -->
-	</PropertyGroup>
+    <PropertyGroup>
+        <!-- <TargetFramework>net8.0</TargetFramework> -->
+        <!-- <Nullable>enable</Nullable> -->
+        <!-- <ImplicitUsings>enable</ImplicitUsings> -->
+        <UserSecretsId>dotnet-Deliscio.Workers.LinksProcessor-6c561a17-0044-43d4-a19c-ffc536c6e507</UserSecretsId>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <DockerfileContext>..\..\..</DockerfileContext>
+        <!-- <LangVersion>preview</LangVersion> -->
+    </PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="MassTransit" Version="8.1.3" />
-		<PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3" />
-		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
-		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
-		<PackageReference Include="SonarAnalyzer.CSharp" Version="9.21.0.86780">
-		  <PrivateAssets>all</PrivateAssets>
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include="Structurizr.Annotations" Version="0.9.3" />
-	</ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="MassTransit" Version="8.1.3" />
+        <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+        <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
+        <PackageReference Include="SonarAnalyzer.CSharp" Version="9.21.0.86780">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Structurizr.Annotations" Version="0.9.3" />
+    </ItemGroup>
 
-	<ItemGroup>
-		<ProjectReference Include="..\..\core\Deliscio.Core\Deliscio.Core.csproj" />
-		<ProjectReference Include="..\..\modules\Links\Deliscio.Modules.Links.MediatR\Deliscio.Modules.Links.MediatR.csproj" />
-		<ProjectReference Include="..\..\modules\Links\Deliscio.Modules.Links\Deliscio.Modules.Links.csproj" />
-		<ProjectReference Include="..\..\modules\QueuedLink\Common\Deliscio.Modules.QueuedLinks.Common.csproj" />
-		<ProjectReference Include="..\..\modules\QueuedLink\MassTransit\Deliscio.Modules.QueuedLinks.MassTransit.csproj" />
-	</ItemGroup>
-	<Target Name="GitVersion" BeforeTargets="BeforeBuild">
-		<!-- <Exec Command="dotnet gitversion /output buildserver" /> -->
-	</Target>
+    <ItemGroup>
+        <ProjectReference Include="..\..\core\Deliscio.Core\Deliscio.Core.csproj" />
+        <ProjectReference Include="..\..\modules\Links\Deliscio.Modules.Links.MediatR\Deliscio.Modules.Links.MediatR.csproj" />
+        <ProjectReference Include="..\..\modules\Links\Deliscio.Modules.Links\Deliscio.Modules.Links.csproj" />
+        <ProjectReference Include="..\..\modules\QueuedLink\Common\Deliscio.Modules.QueuedLinks.Common.csproj" />
+        <ProjectReference Include="..\..\modules\QueuedLink\MassTransit\Deliscio.Modules.QueuedLinks.MassTransit.csproj" />
+    </ItemGroup>
+    <!--<Target Name="GitVersion" BeforeTargets="BeforeBuild">
+         <Exec Command="dotnet gitversion /output buildserver" /> 
+    </Target>-->
 </Project>
