Updates for Link Details + Activate/deactivate a link

--- a/src/web.admin/Deliscio.Web.Admin/Deliscio.Web.Admin.csproj
+++ b/src/web.admin/Deliscio.Web.Admin/Deliscio.Web.Admin.csproj
@@ -1035,7 +1035,7 @@
     <ItemGroup>
         <Folder Include="wwwroot\client\" />
         <Folder Include="wwwroot\css\" />
-        <Folder Include="wwwroot\tsx\components\Alerts\" />
+        <Folder Include="wwwroot\tsx\components\forms\" />
         <Folder Include="wwwroot\tsx\pages\Links\LinkDetailsPage\types\" />
     </ItemGroup>
 
