--- a/src/modules/Authentication/Deliscio.Modules.Authentication/Deliscio.Modules.Authentication.csproj
+++ b/src/modules/Authentication/Deliscio.Modules.Authentication/Deliscio.Modules.Authentication.csproj
@@ -8,12 +8,6 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <Compile Remove="MediatR\Queries\**" />
-	  <EmbeddedResource Remove="MediatR\Queries\**" />
-	  <None Remove="MediatR\Queries\**" />
-	</ItemGroup>
-
-	<ItemGroup>
 	  <PackageReference Include="AspNetCore.Identity.MongoDbCore" Version="3.1.2" />
 	  <PackageReference Include="MediatR" Version="12.2.0" />
 	  <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
@@ -41,6 +35,10 @@
 	  <Reference Include="Microsoft.AspNetCore.Identity">
 	    <HintPath>..\..\..\..\..\..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\7.0.10\Microsoft.AspNetCore.Identity.dll</HintPath>
 	  </Reference>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Common\Errors\" />
 	</ItemGroup>
 
 </Project>
